--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -76,9 +76,10 @@
 }
 
 @misc{oculus-privacy,
-    title={Oculus Privacy Policy for Oculus Account Users},
+    title={VR Data Collection: Traditional And Contemporary Data Types},
     year={2022},
-    author={Meta},
+    author={XpertVR},
+    howpublished={\url{https://xpertvr.ca/vr-data-collection/}},
 }
 
 @article{Akgn2012KeyframebasedLF,
@@ -125,4 +126,56 @@ NOTE    = {revision \#138061}
       eprint={1710.04615},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
+}
+
+@misc{aloha,
+    title={Learning Fine-Grained Bimanual Manipulation with Low-Cost Hardware},
+    author={Tony Zhao and Vikash Kumar and Sergey Levine and Chelsea Finn},
+    year={2023},
+}
+    
+@misc{arunachalam2022holodex,
+      title={Holo-Dex: Teaching Dexterity with Immersive Mixed Reality}, 
+      author={Sridhar Pandian Arunachalam and Irmak Güzey and Soumith Chintala and Lerrel Pinto},
+      year={2022},
+      eprint={2210.06463},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+
+@ARTICLE{10.3389/neuro.09.006.2008,
+AUTHOR={Slater, Mel and Pérez Marcos, Daniel and Ehrsson, Henrik and Sanchez-Vives, Maria},
+	
+TITLE={Towards a digital body: the virtual arm illusion},
+	
+JOURNAL={Frontiers in Human Neuroscience},
+	
+VOLUME={2},
+	
+YEAR={2008},
+	 
+URL={https://www.frontiersin.org/articles/10.3389/neuro.09.006.2008},
+	
+DOI={10.3389/neuro.09.006.2008},
+	
+ISSN={1662-5161},
+}
+
+@ARTICLE{10.3389/fnhum.2015.00141,
+AUTHOR={Kilteni, Konstantina and Maselli, Antonella and Kording, Konrad P. and Slater, Mel},
+	
+TITLE={Over my fake body: body ownership illusions for studying the multisensory basis of own-body perception},
+	
+JOURNAL={Frontiers in Human Neuroscience},
+	
+VOLUME={9},
+	
+YEAR={2015},
+	 
+URL={https://www.frontiersin.org/articles/10.3389/fnhum.2015.00141},
+	
+DOI={10.3389/fnhum.2015.00141},
+	
+ISSN={1662-5161},
 }
