almost done with background

--- a/thesis/content/chapter-future-work.tex
+++ b/thesis/content/chapter-future-work.tex
@@ -3,3 +3,7 @@
 Immersive demonstration with force feedback 
 
 https://arxiv.org/pdf/2301.09157.pdf
+
+training techniques used in VR fixed-base
+
+representation learning holodex
