--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -179,3 +179,72 @@ DOI={10.3389/fnhum.2015.00141},
 	
 ISSN={1662-5161},
 }
+    
+@INPROCEEDINGS{4115578,
+  author={Asfour, Tamim and Gyarfas, Florian and Azad, Pedram and Dillmann, Rudiger},
+  booktitle={2006 6th IEEE-RAS International Conference on Humanoid Robots}, 
+  title={Imitation Learning of Dual-Arm Manipulation Tasks in Humanoid Robots}, 
+  year={2006},
+  volume={},
+  number={},
+  pages={40-47},
+  doi={10.1109/ICHR.2006.321361}}
+
+@INPROCEEDINGS{7989550,
+  author={Ferrari, Paolo and Cognetti, Marco and Oriolo, Giuseppe},
+  booktitle={2017 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Humanoid whole-body planning for loco-manipulation tasks}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={4741-4746},
+  doi={10.1109/ICRA.2017.7989550}}
+
+@misc{kumar2022adapting,
+      title={Adapting Rapid Motor Adaptation for Bipedal Robots},
+      author={Ashish Kumar and Zhongyu Li and Jun Zeng and Deepak Pathak and Koushil Sreenath and Jitendra Malik},
+      year={2022},
+      eprint={2205.15299},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+
+@misc{radosavovic2023learning,
+      title={Learning Humanoid Locomotion with Transformers},
+      author={Ilija Radosavovic and Tete Xiao and Bike Zhang and Trevor Darrell and Jitendra Malik and Koushil Sreenath},
+      year={2023},
+      eprint={2303.03381},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+@misc{kumar2021rma,
+      title={RMA: Rapid Motor Adaptation for Legged Robots},
+      author={Ashish Kumar and Zipeng Fu and Deepak Pathak and Jitendra Malik},
+      year={2021},
+      eprint={2107.04034},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{darvish2023teleoperation,
+      title={Teleoperation of Humanoid Robots: A Survey}, 
+      author={Kourosh Darvish and Luigi Penco and Joao Ramos and Rafael Cisneros and Jerry Pratt and Eiichi Yoshida and Serena Ivaldi and Daniele Pucci},
+      year={2023},
+      eprint={2301.04317},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
+
+@misc{nasa,
+    title={Cockpit Interface for Locomotion and Manipulation Control of the NASA Valkyrie Humanoid in Virtual Reality (VR)},
+    author={Steven Jens Jorgensen et al.},
+    year={2022},
+}
+
+@misc{carvr,
+    title={Virtual Reality Teleoperation Robot},
+    author={Alexis Koopmann and Kressa Fox and Phillip Raich and Jenna Webster},
+    howpublished = {\url{https://my.ece.utah.edu/~kstevens/4710/reports/vr-robot.pdf}},
+}
